--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.3.0",
     "pinia": "^2.0.32",
     "postcss": "^8.4.21",
+    "prismjs": "^1.29.0",
     "tailwindcss": "^3.3.1",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
