feat(Backend): add webpack configuration and build script
feat(Frontend): update package.json to include @types/prismjs

fix(Frontend): change API route from '/api' to '/apiDoc' in Footer and router

fix(Frontend): update API endpoints in Hero and SearchView components to use production URL

fix(Frontend): add TypeScript support to ApiView.vue

fix(Frontend): specify type for chartData in SearchView.vue

fix(Frontend): update user API endpoint in UserView.vue to use production URL

chore(Frontend): update tsconfig.json to relax strict type checks

chore(Backend): add .gitignore to exclude node_modules and dist directories

--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -5,7 +5,14 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmitOnError": false,
+    "strict": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strictPropertyInitialization": false,
+    "strictFunctionTypes": false,
+    "noImplicitThis": false
   },
 
   "references": [
